--- a/VidCoder/Resources/Translations/CommonRes.nl.resx
+++ b/VidCoder/Resources/Translations/CommonRes.nl.resx
@@ -117,138 +117,137 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AddButton" xml:space="preserve">
-    <value>Ekle</value>
+  <data name="AboutLicense" xml:space="preserve">
+    <value>Dit programma is vrije software; u kunt het herdistribueren en/of aanpassen onder de voorwaarden van de GNU General Public License, gepubliceerd door de Free Software Foundation; versie 2 van de licentie, of (optioneel) een latere versie. 
+
+Dit programma is gedistribueerd in de hoop dat het nuttig zal zijn, maar zonder enige garantie; zelfs zonder enige garantie wat betreft VERKOOPBAARHEID or GESCHIKTHEID VOOR EEN BEPAALD DOEL.  Zie de GNU General Public License voor meer details.  Een volledige kopie van de GNU General Public License is opgenomen bij dit programma.</value>
   </data>
-  <data name="RefreshButton" xml:space="preserve">
-    <value>Yenile</value>
+  <data name="BurnedSubtitleToolTip" xml:space="preserve">
+    <value>Integreer de ondertitels met het beeldspoor. Met het beeldspoor geïntegreerde ondertitels kunt u niet uitschakelen tijdens het afspelen.</value>
   </data>
-  <data name="ChooseFromProcessesLabel" xml:space="preserve">
-    <value>Varolan işlemleri seçin:</value>
+  <data name="DefaultSubtitleToolTip" xml:space="preserve">
+    <value>Dit ondertitelspoor markeren als standaard. Dit spoor zal verschijnen tijdens het afspelen tenzij een ander ondertitel spoor wordt gekozen.</value>
   </data>
-  <data name="AddAutoPauseProcessDialogTitle" xml:space="preserve">
-    <value>Otomatik Duraklatma İşlemi Ekle</value>
+  <data name="ForcedSubtitleToolTip" xml:space="preserve">
+    <value>Alleen 'gedwongen ondertitels' van het gegeven spoor tonen. Gewoonlijk zijn dit kleine stukjes buitenlandse dialoog.</value>
   </data>
-  <data name="ProcessNameLabel" xml:space="preserve">
-    <value>İşlem Adı:</value>
+  <data name="OffsetSubtitleToolTip" xml:space="preserve">
+    <value>De tijdsduur waarmee het tonen van ondertitels wordt vervroegd of vertraagd.</value>
   </data>
-  <data name="ExceptionDialogMainText" xml:space="preserve">
-    <value>VidCoder beklenmeyen bir hatayla karşılaştı.</value>
+  <data name="QueueColumnNameRange" xml:space="preserve">
+    <value>Bereik</value>
+    <comment>The label for the queue column that specifies what portion of the video to encode. (Like 25:23 - 37:50)</comment>
   </data>
-  <data name="ExceptionDialogSubText" xml:space="preserve">
-    <value>Hatanın giderilebilmesi için lütfen bu sorunu bize bildirin.</value>
+  <data name="QueueColumnNameDestination" xml:space="preserve">
+    <value>Bestemming</value>
   </data>
-  <data name="ExceptionWindowTitle" xml:space="preserve">
-    <value>Özel Durum</value>
+  <data name="QueueColumnNameSource" xml:space="preserve">
+    <value>Bron</value>
   </data>
-  <data name="FileConflictDialogTitle" xml:space="preserve">
-    <value>Dosya çakışması</value>
+  <data name="QueueColumnNameTitle" xml:space="preserve">
+    <value>Titel</value>
   </data>
-  <data name="OverwriteButton" xml:space="preserve">
-    <value>Üzerine yaz</value>
+  <data name="QueueColumnNameAudioQuality" xml:space="preserve">
+    <value>Geluidskwaliteit</value>
   </data>
-  <data name="AutoRenameButton" xml:space="preserve">
-    <value>Otomatik yeniden adlandır</value>
+  <data name="QueueColumnNameAudioEncoder" xml:space="preserve">
+    <value>Audio Encoder</value>
   </data>
-  <data name="FileConflictWarning" xml:space="preserve">
-    <value>Bir dosya zaten {0} konumunda mevcut. Dosyanın üzerine yazmak mı, otomatik olarak kodlama işi için yeni bir dizin bulmak mı veya işlemi iptal etmek mi istersiniz?</value>
+  <data name="QueueColumnNameVideoEncoder" xml:space="preserve">
+    <value>Video Encoder</value>
   </data>
-  <data name="QueueFileConflictWarning" xml:space="preserve">
-    <value>Bir görev sırası işi  {0} dizin konumunda zaten mevcut. Dosyanın üzerine yazmak mı, otomatik olarak kodlama işi için yeni bir dizin bulmak mı veya işlemi iptal etmek mi istersiniz?</value>
+  <data name="QueueColumnNameVideoQuality" xml:space="preserve">
+    <value>Beeldkwaliteit</value>
   </data>
-  <data name="QueueColumnsDialogTitle" xml:space="preserve">
-    <value>Görev Listesi Kolonları</value>
+  <data name="QueueEtaToolTip" xml:space="preserve">
+    <value>Geschatte benodigde tijd om alle taken in de wachtrij te voltooien.</value>
   </data>
-  <data name="QueueColumnsDialogHeaderText" xml:space="preserve">
-    <value>Sütunları eklemek, çıkarmak ya da yeniden sıralamak için sürükleyip bırakın.</value>
+  <data name="QueueColumnNameDuration" xml:space="preserve">
+    <value>Duur</value>
   </data>
-  <data name="UnusedColumns" xml:space="preserve">
-    <value>Kullanılmayan sütunlar</value>
+  <data name="ForeignAudioSearchToolTip" xml:space="preserve">
+    <value>Hiermee zoekt u naar een ondertitelspoor dat waarschijnlijk stukken buitenlandse dialoog bevat. Geschikt voor films die voornamelijk in je eigen taal zijn.</value>
   </data>
-  <data name="UsedColumns" xml:space="preserve">
-    <value>Kullanılan sütunlar</value>
+  <data name="Default" xml:space="preserve">
+    <value>Standaard</value>
+    <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
   </data>
-  <data name="ScanMultipleWindowTitle" xml:space="preserve">
-    <value>Taranıyor...</value>
+  <data name="Custom" xml:space="preserve">
+    <value>Aangepast</value>
+    <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
   </data>
-  <data name="UpdateSuccessDialogTitle" xml:space="preserve">
-    <value>Başarılı</value>
+  <data name="Browse" xml:space="preserve">
+    <value>Bladeren...</value>
   </data>
-  <data name="UpdateSuccessDialogMessage" xml:space="preserve">
-    <value>VidCoder başarıyla güncelleştirildi.</value>
+  <data name="Delete" xml:space="preserve">
+    <value>Verwijder</value>
   </data>
-  <data name="AboutVidCoderDialogTitle" xml:space="preserve">
-    <value>VidCoder Hakkında</value>
+  <data name="PreviewLabel" xml:space="preserve">
+    <value>Voorbeeld</value>
   </data>
-  <data name="LicenseLabel" xml:space="preserve">
-    <value>Lisans:</value>
+  <data name="Automatic" xml:space="preserve">
+    <value>Automatisch</value>
   </data>
-  <data name="Version" xml:space="preserve">
-    <value>Sürüm</value>
+  <data name="Off" xml:space="preserve">
+    <value>Uit</value>
+    <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
   </data>
-  <data name="BasedOnHandBrake" xml:space="preserve">
-    <value>HandBrake ({0}) sürümü tabanlı</value>
+  <data name="All" xml:space="preserve">
+    <value>Alle</value>
   </data>
-  <data name="Copyright" xml:space="preserve">
-    <value>© {0} VidCoder Geliştiricileri</value>
+  <data name="StreamChoice" xml:space="preserve">
+    <value>Spoor {0}</value>
+    <comment>Used in the encoding settings dialog to mark which audio stream an audio encoding is targeting. By default the encoding works on all streams but you can target it to affect only the first stream, in which case it would label it "Stream 1"</comment>
   </data>
-  <data name="VersionFormat" xml:space="preserve">
-    <value>{0} ({1})</value>
-    <comment>First is version, second is architecture. For example: 1.4.2 (x64)</comment>
+  <data name="Ok" xml:space="preserve">
+    <value>OK</value>
   </data>
-  <data name="BetaVersionFormat" xml:space="preserve">
-    <value>{0} Beta ({1})</value>
-    <comment>First is version, second is architecture. For example: 1.4.2 Beta (x64)</comment>
+  <data name="Cancel" xml:space="preserve">
+    <value>Annuleren</value>
   </data>
-  <data name="PresetNameDialogTitle" xml:space="preserve">
-    <value>Hazır Ayar Adlandırma</value>
+  <data name="Disabled" xml:space="preserve">
+    <value>Uitgeschakeld</value>
   </data>
-  <data name="ChoosePresetName" xml:space="preserve">
-    <value>Hazır ayar için bir ad seçin:</value>
+  <data name="Remove" xml:space="preserve">
+    <value>Verwijder</value>
   </data>
-  <data name="ApplyUpdateDialogTitle" xml:space="preserve">
-    <value>Güncelleme Uygulansın mı?</value>
+  <data name="Copy" xml:space="preserve">
+    <value>Kopieer</value>
   </data>
-  <data name="ApplyUpdateDialogMessage" xml:space="preserve">
-    <value>Bir güncelleme indirildi. Şimdi uygulamak ister misiniz?</value>
+  <data name="Yes" xml:space="preserve">
+    <value>Ja</value>
   </data>
-  <data name="ViewFullChangelog" xml:space="preserve">
-    <value>Tüm değişim günlüğünü göster</value>
+  <data name="No" xml:space="preserve">
+    <value>Nee</value>
   </data>
-  <data name="DisableUpdatesButton" xml:space="preserve">
-    <value>Güncellemeleri Devre Dışı Bırak</value>
+  <data name="CouldNotAccessDirectoriesError" xml:space="preserve">
+    <value>Geen toegang tot de volgende mappen:</value>
   </data>
-  <data name="NoticeMessageTitle" xml:space="preserve">
-    <value>Uyarı</value>
+  <data name="None" xml:space="preserve">
+    <value>Geen</value>
   </data>
-  <data name="UnsupportedOSError" xml:space="preserve">
-    <value>VidCoder işletim sisteminizde desteklenmiyor; Windows XP ve Server 2003'de artık çalışmaz. Lütfen VidCoder 1.4 yükleyin ya da işletim sisteminizi yükseltin.</value>
+  <data name="Succeeded" xml:space="preserve">
+    <value>Geslaagd</value>
   </data>
-  <data name="EncodeCompleteWarning_SleepTitle" xml:space="preserve">
-    <value>Sistem uyku moduna geçmek üzere</value>
+  <data name="Failed" xml:space="preserve">
+    <value>Mislukt</value>
   </data>
-  <data name="EncodeCompleteWarning_LogOffTitle" xml:space="preserve">
-    <value>Oturum kapatılmak üzere</value>
+  <data name="FilePickerExtTemplate" xml:space="preserve">
+    <value>{0} Bestanden</value>
   </data>
-  <data name="EncodeCompleteWarning_ShutdownTitle" xml:space="preserve">
-    <value>Sistem kapatılmak üzere</value>
+  <data name="QueueColumnNamePreset" xml:space="preserve">
+    <value>Voorkeursinstelling</value>
   </data>
-  <data name="EncodeCompleteWarning_SleepMessage" xml:space="preserve">
-    <value>Sistem {0} saniye içinde uyku moduna geçecek.</value>
+  <data name="Success" xml:space="preserve">
+    <value>Gelukt</value>
   </data>
-  <data name="EncodeCompleteWarning_LogOffMessage" xml:space="preserve">
-    <value>{0} saniye içinde oturumunuz kapatılacak.</value>
+  <data name="ConfirmDialogTitle" xml:space="preserve">
+    <value>Bevestig</value>
   </data>
-  <data name="EncodeCompleteWarning_ShutdownMessage" xml:space="preserve">
-    <value>Sistem {0} saniye içinde kapatılacak.</value>
+  <data name="FileFailureErrorMessage" xml:space="preserve">
+    <value>De bestandsbewerking kon niet worden voltooid.</value>
   </data>
-  <data name="EncodeCompleteWarning_Title" xml:space="preserve">
-    <value>Kodlama tamamladı.</value>
-  </data>
-	<data name="CouldNotFindVideoPlayerError" xml:space="preserve">
-    <value>{0} için video oynatıcı bulunamadı.</value>
-  </data>
-	<data name="ErrorPlayingSource" xml:space="preserve">
-    <value>Kaynak oynatılırken hata oluştu.</value>
+  <data name="FileFailureErrorTitle" xml:space="preserve">
+    <value>Bestandsbewerking niet gelukt</value>
   </data>
 </root>
