--- a/VidCoder/Resources/Translations/MiscRes.es.resx
+++ b/VidCoder/Resources/Translations/MiscRes.es.resx
@@ -245,6 +245,10 @@
   <data name="EncodeCompleteWarning_Title" xml:space="preserve">
     <value>Se ha completado la codificación.</value>
   </data>
-	
-	
+	<data name="CouldNotFindVideoPlayerError" xml:space="preserve">
+    <value>No se pudo encontrar un reproductor de vídeo para {0}.</value>
+  </data>
+	<data name="ErrorPlayingSource" xml:space="preserve">
+    <value>Error al reproducir el archivo fuente.</value>
+  </data>
 </root>
