--- a/VidCoder/Resources/Translations/MiscRes.ka.resx
+++ b/VidCoder/Resources/Translations/MiscRes.ka.resx
@@ -118,137 +118,137 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AddButton" xml:space="preserve">
-    <value>Ekle</value>
+    <value>დამატება</value>
   </data>
   <data name="RefreshButton" xml:space="preserve">
-    <value>Yenile</value>
+    <value>განახლება</value>
   </data>
   <data name="ChooseFromProcessesLabel" xml:space="preserve">
-    <value>Varolan işlemleri seçin:</value>
+    <value>აირჩეთ არსებული პროცესიდან:</value>
   </data>
   <data name="AddAutoPauseProcessDialogTitle" xml:space="preserve">
-    <value>Otomatik Duraklatma İşlemi Ekle</value>
+    <value>ავტოპაუზის პროცესის დამატება</value>
   </data>
   <data name="ProcessNameLabel" xml:space="preserve">
-    <value>İşlem Adı:</value>
+    <value>პროცესის სახელი:</value>
   </data>
   <data name="ExceptionDialogMainText" xml:space="preserve">
-    <value>VidCoder beklenmeyen bir hatayla karşılaştı.</value>
+    <value>VidCoder-მა მოულოდნელი შეცდომა განიცადა.</value>
   </data>
   <data name="ExceptionDialogSubText" xml:space="preserve">
-    <value>Hatanın giderilebilmesi için lütfen bu sorunu bize bildirin.</value>
+    <value>გთხოვთ შეგვატყობინეთ ეს შეცდომა, მომავალში აღმოსაფხვრელად.</value>
   </data>
   <data name="ExceptionWindowTitle" xml:space="preserve">
-    <value>Özel Durum</value>
+    <value>გამონაკლისი</value>
   </data>
   <data name="FileConflictDialogTitle" xml:space="preserve">
-    <value>Dosya çakışması</value>
+    <value>ფაილის კონფლიქტი</value>
   </data>
   <data name="OverwriteButton" xml:space="preserve">
-    <value>Üzerine yaz</value>
+    <value>გადაწერა</value>
   </data>
   <data name="AutoRenameButton" xml:space="preserve">
-    <value>Otomatik yeniden adlandır</value>
+    <value>ავტომატური სახელის შეცვლა</value>
   </data>
   <data name="FileConflictWarning" xml:space="preserve">
-    <value>Bir dosya zaten {0} konumunda mevcut. Dosyanın üzerine yazmak mı, otomatik olarak kodlama işi için yeni bir dizin bulmak mı veya işlemi iptal etmek mi istersiniz?</value>
+    <value>ფაილი არსებობს ფოლდერში {0}. გსურთ ფაილის გადაწერა, ავტომატურად მოძებნის ახალ დასამახსოვრებელ ადგილს კოდირების დავალების შესასრულებლად ან შეწყვეტავს ოპერაციას?</value>
   </data>
   <data name="QueueFileConflictWarning" xml:space="preserve">
-    <value>Bir görev sırası işi  {0} dizin konumunda zaten mevcut. Dosyanın üzerine yazmak mı, otomatik olarak kodlama işi için yeni bir dizin bulmak mı veya işlemi iptal etmek mi istersiniz?</value>
+    <value>დავალების სიის არსებული დასამახსოვრებელი ადგილია {0}. გსურთ ფაილის გადაწერა, ავტომატურად მოძებნის ახალ დასამახსოვრებელ ადგილს კოდირების დავალების შესასრულებლად ან შეწყვეტავს ოპერაციას?</value>
   </data>
   <data name="QueueColumnsDialogTitle" xml:space="preserve">
-    <value>Görev Listesi Kolonları</value>
+    <value>დავალების სიის მწკრივები</value>
   </data>
   <data name="QueueColumnsDialogHeaderText" xml:space="preserve">
-    <value>Sütunları eklemek, çıkarmak ya da yeniden sıralamak için sürükleyip bırakın.</value>
+    <value>დასამატებლად გადმოიტანეთ, წაშალეთ ან განალეგეთ მწკრივები.</value>
   </data>
   <data name="UnusedColumns" xml:space="preserve">
-    <value>Kullanılmayan sütunlar</value>
+    <value>გამოუყენებელი მწკრივები</value>
   </data>
   <data name="UsedColumns" xml:space="preserve">
-    <value>Kullanılan sütunlar</value>
+    <value>გამოყენებული მწკრივები</value>
   </data>
   <data name="ScanMultipleWindowTitle" xml:space="preserve">
-    <value>Taranıyor...</value>
+    <value>სკანირება...</value>
   </data>
   <data name="UpdateSuccessDialogTitle" xml:space="preserve">
-    <value>Başarılı</value>
+    <value>წარმატებულია</value>
   </data>
   <data name="UpdateSuccessDialogMessage" xml:space="preserve">
-    <value>VidCoder başarıyla güncelleştirildi.</value>
+    <value>VidCoder-ი აქტუალიზირება წარმატებულია.</value>
   </data>
   <data name="AboutVidCoderDialogTitle" xml:space="preserve">
-    <value>VidCoder Hakkında</value>
+    <value>VidCoder-ის შესახებ</value>
   </data>
   <data name="LicenseLabel" xml:space="preserve">
-    <value>Lisans:</value>
+    <value>ლიცენზია:</value>
   </data>
   <data name="Version" xml:space="preserve">
-    <value>Sürüm</value>
+    <value>ვერსია</value>
   </data>
   <data name="BasedOnHandBrake" xml:space="preserve">
-    <value>HandBrake ({0}) sürümü tabanlı</value>
+    <value>დაფუძნებულია HandBrake ({0})-ზე</value>
   </data>
   <data name="Copyright" xml:space="preserve">
-    <value>© {0} VidCoder Geliştiricileri</value>
+    <value>© {0} VidCoder-ის შენქმნელები</value>
   </data>
   <data name="VersionFormat" xml:space="preserve">
     <value>{0} ({1})</value>
     <comment>First is version, second is architecture. For example: 1.4.2 (x64)</comment>
   </data>
   <data name="BetaVersionFormat" xml:space="preserve">
-    <value>{0} Beta ({1})</value>
+    <value>{0} ბეტა ({1})</value>
     <comment>First is version, second is architecture. For example: 1.4.2 Beta (x64)</comment>
   </data>
   <data name="PresetNameDialogTitle" xml:space="preserve">
-    <value>Hazır Ayar Adlandırma</value>
+    <value>შაბლონის სახელი</value>
   </data>
   <data name="ChoosePresetName" xml:space="preserve">
-    <value>Hazır ayar için bir ad seçin:</value>
+    <value>აირჩიეთ სახელი შაბლონისთვის:</value>
   </data>
   <data name="ApplyUpdateDialogTitle" xml:space="preserve">
-    <value>Güncelleme Uygulansın mı?</value>
+    <value>გსურთ აქტუალიზირება?</value>
   </data>
   <data name="ApplyUpdateDialogMessage" xml:space="preserve">
-    <value>Bir güncelleme indirildi. Şimdi uygulamak ister misiniz?</value>
+    <value>აქტუალიზირება ჩამოიტვირთულია, გსურთ დაყენება?</value>
   </data>
   <data name="ViewFullChangelog" xml:space="preserve">
-    <value>Tüm değişim günlüğünü göster</value>
+    <value>სრული ცვილებების ნახვა</value>
   </data>
   <data name="DisableUpdatesButton" xml:space="preserve">
-    <value>Güncellemeleri Devre Dışı Bırak</value>
+    <value>აქტუალიზირების დეაქტივირება</value>
   </data>
   <data name="NoticeMessageTitle" xml:space="preserve">
-    <value>Uyarı</value>
+    <value>გაფრთხილება</value>
   </data>
   <data name="UnsupportedOSError" xml:space="preserve">
-    <value>VidCoder işletim sisteminizde desteklenmiyor; Windows XP ve Server 2003'de artık çalışmaz. Lütfen VidCoder 1.4 yükleyin ya da işletim sisteminizi yükseltin.</value>
+    <value>VidCoder-ი არ მუშაობს თქვენ ოპერატუილ სისტემაზე. Windows XP და Server 2003-ზე დიდი ხანია არ მუშაობს. დააყენეთ VidCoder-ის 1.4 ვესია, ან განაახლეთ ოპერატუილი სისტემა.</value>
   </data>
   <data name="EncodeCompleteWarning_SleepTitle" xml:space="preserve">
-    <value>Sistem uyku moduna geçmek üzere</value>
+    <value>სისტემის პროგრამირებული ძილის რეჟიმი</value>
   </data>
   <data name="EncodeCompleteWarning_LogOffTitle" xml:space="preserve">
-    <value>Oturum kapatılmak üzere</value>
+    <value>სისტემიდან პროგრამირებული გამოსვლა</value>
   </data>
   <data name="EncodeCompleteWarning_ShutdownTitle" xml:space="preserve">
-    <value>Sistem kapatılmak üzere</value>
+    <value>სისტემის პროგრამირებული გათიშვა</value>
   </data>
   <data name="EncodeCompleteWarning_SleepMessage" xml:space="preserve">
-    <value>Sistem {0} saniye içinde uyku moduna geçecek.</value>
+    <value>სისტემა ძილის რეჟიმში გადავა {0} წამში.</value>
   </data>
   <data name="EncodeCompleteWarning_LogOffMessage" xml:space="preserve">
-    <value>{0} saniye içinde oturumunuz kapatılacak.</value>
+    <value>თქვენ გამოხვალთ სისტემიდან {0} წამში.</value>
   </data>
   <data name="EncodeCompleteWarning_ShutdownMessage" xml:space="preserve">
-    <value>Sistem {0} saniye içinde kapatılacak.</value>
+    <value>სისტემა გაითიშება {0} წამში.</value>
   </data>
   <data name="EncodeCompleteWarning_Title" xml:space="preserve">
-    <value>Kodlama tamamladı.</value>
+    <value>კოდირება დასრულებულია.</value>
   </data>
 	<data name="CouldNotFindVideoPlayerError" xml:space="preserve">
-    <value>{0} için video oynatıcı bulunamadı.</value>
+    <value>{0}-ისთვის რეპროდუქტორი ვერ მოიძებნა.</value>
   </data>
 	<data name="ErrorPlayingSource" xml:space="preserve">
-    <value>Kaynak oynatılırken hata oluştu.</value>
+    <value>რეპროდუქცია წარუმატებელია.</value>
   </data>
 </root>
