--- a/VidCoder/Resources/Translations/MiscRes.nl.resx
+++ b/VidCoder/Resources/Translations/MiscRes.nl.resx
@@ -118,79 +118,79 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AddButton" xml:space="preserve">
-    <value>Ekle</value>
+    <value>Toevoegen</value>
   </data>
   <data name="RefreshButton" xml:space="preserve">
-    <value>Yenile</value>
+    <value>Vernieuwen</value>
   </data>
   <data name="ChooseFromProcessesLabel" xml:space="preserve">
-    <value>Varolan işlemleri seçin:</value>
+    <value>Kies uit bestaande processen:</value>
   </data>
   <data name="AddAutoPauseProcessDialogTitle" xml:space="preserve">
-    <value>Otomatik Duraklatma İşlemi Ekle</value>
+    <value>Auto pauze proces toevoegen</value>
   </data>
   <data name="ProcessNameLabel" xml:space="preserve">
-    <value>İşlem Adı:</value>
+    <value>Procesnaam:</value>
   </data>
   <data name="ExceptionDialogMainText" xml:space="preserve">
-    <value>VidCoder beklenmeyen bir hatayla karşılaştı.</value>
+    <value>VidCoder heeft een onverwachte fout ervaren.</value>
   </data>
   <data name="ExceptionDialogSubText" xml:space="preserve">
-    <value>Hatanın giderilebilmesi için lütfen bu sorunu bize bildirin.</value>
+    <value>Rapporteer dit AUB zodat het in de toekomst kan worden verholpen.</value>
   </data>
   <data name="ExceptionWindowTitle" xml:space="preserve">
-    <value>Özel Durum</value>
+    <value>Uitzondering</value>
   </data>
   <data name="FileConflictDialogTitle" xml:space="preserve">
-    <value>Dosya çakışması</value>
+    <value>Bestandsconflict</value>
   </data>
   <data name="OverwriteButton" xml:space="preserve">
-    <value>Üzerine yaz</value>
+    <value>Overschrijven</value>
   </data>
   <data name="AutoRenameButton" xml:space="preserve">
-    <value>Otomatik yeniden adlandır</value>
+    <value>Auto-hernoemen</value>
   </data>
   <data name="FileConflictWarning" xml:space="preserve">
-    <value>Bir dosya zaten {0} konumunda mevcut. Dosyanın üzerine yazmak mı, otomatik olarak kodlama işi için yeni bir dizin bulmak mı veya işlemi iptal etmek mi istersiniz?</value>
+    <value>Er bestaat al een bestand op pad {0}. Wilt u het overschrijven, automatisch een nieuw pad bepalen voor de coderingstaak of de bewerking annuleren?</value>
   </data>
   <data name="QueueFileConflictWarning" xml:space="preserve">
-    <value>Bir görev sırası işi  {0} dizin konumunda zaten mevcut. Dosyanın üzerine yazmak mı, otomatik olarak kodlama işi için yeni bir dizin bulmak mı veya işlemi iptal etmek mi istersiniz?</value>
+    <value>Een taak in de wachtrij heeft al {0} als doel pad op. Wilt u het bestand overschrijven, automatisch een nieuw doel pad voor de coderingstaak bepalen of de bewerking annuleren?</value>
   </data>
   <data name="QueueColumnsDialogTitle" xml:space="preserve">
-    <value>Görev Listesi Kolonları</value>
+    <value>Wachtrij kolommen</value>
   </data>
   <data name="QueueColumnsDialogHeaderText" xml:space="preserve">
-    <value>Sütunları eklemek, çıkarmak ya da yeniden sıralamak için sürükleyip bırakın.</value>
+    <value>Slepen en neerzetten om kolommen toe te voegen, te verwijderen of de volgorde te wijzigen.</value>
   </data>
   <data name="UnusedColumns" xml:space="preserve">
-    <value>Kullanılmayan sütunlar</value>
+    <value>Ongebruikte kolommen</value>
   </data>
   <data name="UsedColumns" xml:space="preserve">
-    <value>Kullanılan sütunlar</value>
+    <value>Gebruikte kolommen</value>
   </data>
   <data name="ScanMultipleWindowTitle" xml:space="preserve">
-    <value>Taranıyor...</value>
+    <value>Aan het scannen...</value>
   </data>
   <data name="UpdateSuccessDialogTitle" xml:space="preserve">
-    <value>Başarılı</value>
+    <value>Gelukt</value>
   </data>
   <data name="UpdateSuccessDialogMessage" xml:space="preserve">
-    <value>VidCoder başarıyla güncelleştirildi.</value>
+    <value>VidCoder is vernieuwd.</value>
   </data>
   <data name="AboutVidCoderDialogTitle" xml:space="preserve">
-    <value>VidCoder Hakkında</value>
+    <value>Over VidCoder</value>
   </data>
   <data name="LicenseLabel" xml:space="preserve">
-    <value>Lisans:</value>
+    <value>Licentie:</value>
   </data>
   <data name="Version" xml:space="preserve">
-    <value>Sürüm</value>
+    <value>Versie</value>
   </data>
   <data name="BasedOnHandBrake" xml:space="preserve">
-    <value>HandBrake ({0}) sürümü tabanlı</value>
+    <value>Gebaseerd op HandBrake ({0})</value>
   </data>
   <data name="Copyright" xml:space="preserve">
-    <value>© {0} VidCoder Geliştiricileri</value>
+    <value>© {0} VidCoder ontwikkelaars</value>
   </data>
   <data name="VersionFormat" xml:space="preserve">
     <value>{0} ({1})</value>
@@ -201,54 +201,54 @@
     <comment>First is version, second is architecture. For example: 1.4.2 Beta (x64)</comment>
   </data>
   <data name="PresetNameDialogTitle" xml:space="preserve">
-    <value>Hazır Ayar Adlandırma</value>
+    <value>Naam voorkeursinstelling</value>
   </data>
   <data name="ChoosePresetName" xml:space="preserve">
-    <value>Hazır ayar için bir ad seçin:</value>
+    <value>Kies een naam voor de voorkeursinstelling:</value>
   </data>
   <data name="ApplyUpdateDialogTitle" xml:space="preserve">
-    <value>Güncelleme Uygulansın mı?</value>
+    <value>Update toepassen?</value>
   </data>
   <data name="ApplyUpdateDialogMessage" xml:space="preserve">
-    <value>Bir güncelleme indirildi. Şimdi uygulamak ister misiniz?</value>
+    <value>Een update is gedownload. Wilt u deze nu toepassen?</value>
   </data>
   <data name="ViewFullChangelog" xml:space="preserve">
-    <value>Tüm değişim günlüğünü göster</value>
+    <value>Weergave volledig Changelog</value>
   </data>
   <data name="DisableUpdatesButton" xml:space="preserve">
-    <value>Güncellemeleri Devre Dışı Bırak</value>
+    <value>Updates uitschakelen</value>
   </data>
   <data name="NoticeMessageTitle" xml:space="preserve">
-    <value>Uyarı</value>
+    <value>Kennisgeving</value>
   </data>
   <data name="UnsupportedOSError" xml:space="preserve">
-    <value>VidCoder işletim sisteminizde desteklenmiyor; Windows XP ve Server 2003'de artık çalışmaz. Lütfen VidCoder 1.4 yükleyin ya da işletim sisteminizi yükseltin.</value>
+    <value>Uw besturingssysteem wordt niet ondersteund door VidCoder. Windox XP en Server 2003 werken niet meer. Gelieve VidCoder 1.4 te installeren of werk uw besturingssysteem bij naar een nieuwere versie.</value>
   </data>
   <data name="EncodeCompleteWarning_SleepTitle" xml:space="preserve">
-    <value>Sistem uyku moduna geçmek üzere</value>
+    <value>Het systeem gaat binnenkort in slaap modus</value>
   </data>
   <data name="EncodeCompleteWarning_LogOffTitle" xml:space="preserve">
-    <value>Oturum kapatılmak üzere</value>
+    <value>Je wordt binnenkort uitgelogd</value>
   </data>
   <data name="EncodeCompleteWarning_ShutdownTitle" xml:space="preserve">
-    <value>Sistem kapatılmak üzere</value>
+    <value>Het systeem wordt binnenkort uitgeschakeld</value>
   </data>
   <data name="EncodeCompleteWarning_SleepMessage" xml:space="preserve">
-    <value>Sistem {0} saniye içinde uyku moduna geçecek.</value>
+    <value>Het systeem gaat over {0} seconden in slaap modus.</value>
   </data>
   <data name="EncodeCompleteWarning_LogOffMessage" xml:space="preserve">
-    <value>{0} saniye içinde oturumunuz kapatılacak.</value>
+    <value>Je wordt uitgelogd in {0} seconden.</value>
   </data>
   <data name="EncodeCompleteWarning_ShutdownMessage" xml:space="preserve">
-    <value>Sistem {0} saniye içinde kapatılacak.</value>
+    <value>Het systeem schakelt uit over {0} seconden.</value>
   </data>
   <data name="EncodeCompleteWarning_Title" xml:space="preserve">
-    <value>Kodlama tamamladı.</value>
+    <value>Encodering is voltooid.</value>
   </data>
 	<data name="CouldNotFindVideoPlayerError" xml:space="preserve">
-    <value>{0} için video oynatıcı bulunamadı.</value>
+    <value>Kon geen video speler vinden voor {0}.</value>
   </data>
 	<data name="ErrorPlayingSource" xml:space="preserve">
-    <value>Kaynak oynatılırken hata oluştu.</value>
+    <value>Probleem bij het afspelen van bron.</value>
   </data>
 </root>
