--- a/VidCoder/Resources/Translations/SubtitleRes.nl.resx
+++ b/VidCoder/Resources/Translations/SubtitleRes.nl.resx
@@ -117,138 +117,61 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AddButton" xml:space="preserve">
-    <value>Ekle</value>
+  <data name="SubtitlesWindowTitle" xml:space="preserve">
+    <value>Ondertitels</value>
   </data>
-  <data name="RefreshButton" xml:space="preserve">
-    <value>Yenile</value>
+  <data name="RemoveSubtitleTrack" xml:space="preserve">
+    <value>Dit spoor verwijderen</value>
   </data>
-  <data name="ChooseFromProcessesLabel" xml:space="preserve">
-    <value>Varolan işlemleri seçin:</value>
+  <data name="SubtitlesFromSourceLabel" xml:space="preserve">
+    <value>Ondertitels van bron:</value>
   </data>
-  <data name="AddAutoPauseProcessDialogTitle" xml:space="preserve">
-    <value>Otomatik Duraklatma İşlemi Ekle</value>
+  <data name="QuickTimeSubtitlesWarning" xml:space="preserve">
+    <value>Tekst ondertiteling zou niet kunnen verschijnen in Quicktime, tenzij de .m4v extensie wordt gebruikt.</value>
   </data>
-  <data name="ProcessNameLabel" xml:space="preserve">
-    <value>İşlem Adı:</value>
+  <data name="NameColumn" xml:space="preserve">
+    <value>Naam</value>
   </data>
-  <data name="ExceptionDialogMainText" xml:space="preserve">
-    <value>VidCoder beklenmeyen bir hatayla karşılaştı.</value>
+  <data name="DefaultColumn" xml:space="preserve">
+    <value>Standaard</value>
   </data>
-  <data name="ExceptionDialogSubText" xml:space="preserve">
-    <value>Hatanın giderilebilmesi için lütfen bu sorunu bize bildirin.</value>
+  <data name="ForcedOnlyColumn" xml:space="preserve">
+    <value>Alleen 'gedwongen'</value>
   </data>
-  <data name="ExceptionWindowTitle" xml:space="preserve">
-    <value>Özel Durum</value>
+  <data name="BurnedInColumn" xml:space="preserve">
+    <value>Integreren met beeld</value>
   </data>
-  <data name="FileConflictDialogTitle" xml:space="preserve">
-    <value>Dosya çakışması</value>
+  <data name="ExternalSubtitlesLabel" xml:space="preserve">
+    <value>Externe ondertitels:</value>
   </data>
-  <data name="OverwriteButton" xml:space="preserve">
-    <value>Üzerine yaz</value>
+  <data name="FileColumn" xml:space="preserve">
+    <value>Bestand</value>
   </data>
-  <data name="AutoRenameButton" xml:space="preserve">
-    <value>Otomatik yeniden adlandır</value>
+  <data name="LanguageColumn" xml:space="preserve">
+    <value>Taal</value>
   </data>
-  <data name="FileConflictWarning" xml:space="preserve">
-    <value>Bir dosya zaten {0} konumunda mevcut. Dosyanın üzerine yazmak mı, otomatik olarak kodlama işi için yeni bir dizin bulmak mı veya işlemi iptal etmek mi istersiniz?</value>
+  <data name="CharCodeColumn" xml:space="preserve">
+    <value>Char Code</value>
   </data>
-  <data name="QueueFileConflictWarning" xml:space="preserve">
-    <value>Bir görev sırası işi  {0} dizin konumunda zaten mevcut. Dosyanın üzerine yazmak mı, otomatik olarak kodlama işi için yeni bir dizin bulmak mı veya işlemi iptal etmek mi istersiniz?</value>
+  <data name="OffsetColumn" xml:space="preserve">
+    <value>Offset (ms)</value>
   </data>
-  <data name="QueueColumnsDialogTitle" xml:space="preserve">
-    <value>Görev Listesi Kolonları</value>
+  <data name="ImportSrtButton" xml:space="preserve">
+    <value>Importeer .srt bestand...</value>
   </data>
-  <data name="QueueColumnsDialogHeaderText" xml:space="preserve">
-    <value>Sütunları eklemek, çıkarmak ya da yeniden sıralamak için sürükleyip bırakın.</value>
+  <data name="BurnedOverlapWarning" xml:space="preserve">
+    <value>Andere ondertitelsporen zullen overlappen met geïntegreerde ondertitels.</value>
   </data>
-  <data name="UnusedColumns" xml:space="preserve">
-    <value>Kullanılmayan sütunlar</value>
+  <data name="ForeignAudioSearch" xml:space="preserve">
+    <value>Buitenlandse Audio zoeken</value>
   </data>
-  <data name="UsedColumns" xml:space="preserve">
-    <value>Kullanılan sütunlar</value>
+  <data name="AddSourceNoSubtitlesToolTip" xml:space="preserve">
+    <value>De video bron bevat geen ondertitels.</value>
   </data>
-  <data name="ScanMultipleWindowTitle" xml:space="preserve">
-    <value>Taranıyor...</value>
+  <data name="SrtFilePickerText" xml:space="preserve">
+    <value>Ondertitel bestand toevoegen</value>
   </data>
-  <data name="UpdateSuccessDialogTitle" xml:space="preserve">
-    <value>Başarılı</value>
-  </data>
-  <data name="UpdateSuccessDialogMessage" xml:space="preserve">
-    <value>VidCoder başarıyla güncelleştirildi.</value>
-  </data>
-  <data name="AboutVidCoderDialogTitle" xml:space="preserve">
-    <value>VidCoder Hakkında</value>
-  </data>
-  <data name="LicenseLabel" xml:space="preserve">
-    <value>Lisans:</value>
-  </data>
-  <data name="Version" xml:space="preserve">
-    <value>Sürüm</value>
-  </data>
-  <data name="BasedOnHandBrake" xml:space="preserve">
-    <value>HandBrake ({0}) sürümü tabanlı</value>
-  </data>
-  <data name="Copyright" xml:space="preserve">
-    <value>© {0} VidCoder Geliştiricileri</value>
-  </data>
-  <data name="VersionFormat" xml:space="preserve">
-    <value>{0} ({1})</value>
-    <comment>First is version, second is architecture. For example: 1.4.2 (x64)</comment>
-  </data>
-  <data name="BetaVersionFormat" xml:space="preserve">
-    <value>{0} Beta ({1})</value>
-    <comment>First is version, second is architecture. For example: 1.4.2 Beta (x64)</comment>
-  </data>
-  <data name="PresetNameDialogTitle" xml:space="preserve">
-    <value>Hazır Ayar Adlandırma</value>
-  </data>
-  <data name="ChoosePresetName" xml:space="preserve">
-    <value>Hazır ayar için bir ad seçin:</value>
-  </data>
-  <data name="ApplyUpdateDialogTitle" xml:space="preserve">
-    <value>Güncelleme Uygulansın mı?</value>
-  </data>
-  <data name="ApplyUpdateDialogMessage" xml:space="preserve">
-    <value>Bir güncelleme indirildi. Şimdi uygulamak ister misiniz?</value>
-  </data>
-  <data name="ViewFullChangelog" xml:space="preserve">
-    <value>Tüm değişim günlüğünü göster</value>
-  </data>
-  <data name="DisableUpdatesButton" xml:space="preserve">
-    <value>Güncellemeleri Devre Dışı Bırak</value>
-  </data>
-  <data name="NoticeMessageTitle" xml:space="preserve">
-    <value>Uyarı</value>
-  </data>
-  <data name="UnsupportedOSError" xml:space="preserve">
-    <value>VidCoder işletim sisteminizde desteklenmiyor; Windows XP ve Server 2003'de artık çalışmaz. Lütfen VidCoder 1.4 yükleyin ya da işletim sisteminizi yükseltin.</value>
-  </data>
-  <data name="EncodeCompleteWarning_SleepTitle" xml:space="preserve">
-    <value>Sistem uyku moduna geçmek üzere</value>
-  </data>
-  <data name="EncodeCompleteWarning_LogOffTitle" xml:space="preserve">
-    <value>Oturum kapatılmak üzere</value>
-  </data>
-  <data name="EncodeCompleteWarning_ShutdownTitle" xml:space="preserve">
-    <value>Sistem kapatılmak üzere</value>
-  </data>
-  <data name="EncodeCompleteWarning_SleepMessage" xml:space="preserve">
-    <value>Sistem {0} saniye içinde uyku moduna geçecek.</value>
-  </data>
-  <data name="EncodeCompleteWarning_LogOffMessage" xml:space="preserve">
-    <value>{0} saniye içinde oturumunuz kapatılacak.</value>
-  </data>
-  <data name="EncodeCompleteWarning_ShutdownMessage" xml:space="preserve">
-    <value>Sistem {0} saniye içinde kapatılacak.</value>
-  </data>
-  <data name="EncodeCompleteWarning_Title" xml:space="preserve">
-    <value>Kodlama tamamladı.</value>
-  </data>
-	<data name="CouldNotFindVideoPlayerError" xml:space="preserve">
-    <value>{0} için video oynatıcı bulunamadı.</value>
-  </data>
-	<data name="ErrorPlayingSource" xml:space="preserve">
-    <value>Kaynak oynatılırken hata oluştu.</value>
+	<data name="DuplicateSubtitleTrack" xml:space="preserve">
+    <value>Dupliceer dit spoor</value>
   </data>
 </root>
